# misis2024s-23-02-fedulov-p-s

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  reports.md  status.md
opengltest/: .gitignore  WindowTest.cpp
opengltest/shader/: CMakeLists.txt  shader.cpp  shader.hpp
opengltest/shaders/: LightSource.frag  SimpleShader.frag  SimpleShader.vert
prj.app/robocrawl/: CMakeLists.txt  New Text Document.txt  input.txt  output.txt  robocrawl.cpp  start.bat
prj.app/timing_q/: CMakeLIsts.txt
prj.app/timing_q/exec/: CMakeLists.txt  timing_q.cpp
prj.app/timing_q/timer/: CMakeLists.txt  timer.cpp  timer.hpp
prj.codeforces/: 1051b.cpp  1913b.cpp  1918a.cpp  1921a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt
prj.cw/opengltest/: CMakeLists.txt  WindowTest.cpp
prj.lab/: CMakeLists.txt
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: rational.hpp
prj.lab/stack/: CMakeLists.txt  stack.cpp  stack.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_stack.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp
status.logs/: прожектне_финальная_версия_скидывать_ненадолучше.docx
(+11 files in other folders)
